--- a/files/ds/ds4/ds_coloring_cor.ipynb
+++ b/files/ds/ds4/ds_coloring_cor.ipynb
@@ -4,18 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/ds/ds4/ds_coloring_cor.ipynb'>DS 4 Corrigé : Coloriage de graphe <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# DS 4 Corrigé : Coloriage de graphe\n",
     "\n",
-    "## Définitions"
+    "## Définitions (/4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1.\n",
+    "# 1. (/1)\n",
     "G1 = [[1, 3], [0, 2, 4], [1, 5], [0, 4], [3, 1, 5], [4, 1, 2]]"
    ]
   },
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q2. Exemple de 3-coloriage possible :\n",
+    "Q2. (/0.5) Exemple de 3-coloriage possible :\n",
     " \n",
     "| Sommet | 0 | 1 | 2 | 3 | 4 | 5 |\n",
     "|---|---|---|---|---|---|---|\n",
@@ -34,14 +34,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q3. Les 3 sommets 1, 2, 5 sont tous reliés entre eux donc doivent être de couleurs différentes. D'où la nécessité d'avoir au moins 3 couleurs.  \n",
+    "Q3. (/0.5) Les 3 sommets 1, 2, 5 sont tous reliés entre eux donc doivent être de couleurs différentes. D'où la nécessité d'avoir au moins 3 couleurs.  \n",
     "\n",
-    "Q4. Il suffit de colorier chaque sommet avec une couleur différente."
+    "Q4. (/0.5) Il suffit de colorier chaque sommet avec une couleur différente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -50,12 +50,13 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Q5 (/1.5)\n",
     "def valid(G, C):\n",
     "    for u in range(len(G)):\n",
     "        for v in G[u]:\n",
@@ -70,23 +71,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Degré"
+    "## Degré (/5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1.\n",
+    "# 1. (/0.5)\n",
     "def deg(G, v):\n",
     "    return len(G[v])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -95,13 +96,13 @@
        "3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 2.\n",
+    "# 2. (/1.5)\n",
     "def deg_max(G):\n",
     "    maxi = 0\n",
     "    for v in range(len(G)):\n",
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -124,13 +125,13 @@
        "[0, 1, 0, 1, 0, 2]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 3.\n",
+    "# 3. (/3)\n",
     "def delta_color(G):\n",
     "    n = len(G)\n",
     "    colors = [-1]*n\n",
@@ -152,19 +153,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clique\n",
+    "## Clique (/2.5)\n",
     "\n",
-    "Q1. Tous les sommets d'une clique doivent être de couleur différente."
+    "Q1. (/0.5) Tous les sommets d'une clique doivent être de couleur différente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2.\n",
-    "\n",
+    "# 2. (/2)\n",
     "def is_clique(G, V):\n",
     "    for u in V:\n",
     "        for v in V:\n",
@@ -177,12 +177,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2-coloration par parcours en profondeur"
+    "## 2-coloration par parcours en profondeur (/3.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -191,12 +191,13 @@
        "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 1. (/2.5)\n",
     "def color2(G):\n",
     "    C = [-1]*len(G)\n",
     "    def aux(v, c): # parcours en profondeur sur v, en lui donnant la couleur c\n",
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -227,12 +228,13 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 2. (/1)\n",
     "def color2(G):\n",
     "    C = [-1]*len(G)\n",
     "    def aux(v, c): # parcours en profondeur sur v, en lui donnant la couleur c\n",
@@ -257,12 +259,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comptage du nombre de couleurs"
+    "## Comptage du nombre de couleurs (/5.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -271,12 +273,13 @@
        "3"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 1. (/1.5)\n",
     "def ncolor1(C):\n",
     "    L = []\n",
     "    for c in C:\n",
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -298,12 +301,13 @@
        "3"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 2. (/2)\n",
     "def ncolor2(C):\n",
     "    C.sort()\n",
     "    n = 1\n",
@@ -317,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -326,12 +330,13 @@
        "3"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 3. (/2)\n",
     "def ncolor3(C):\n",
     "    B = [False]*len(C)\n",
     "    for c in C:\n",
@@ -348,7 +353,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
+   "hash": "73a7628e7fbe50a71e811baaf24b93be3ca0f9147b8f95081f8bab36bc67b220"
   },
   "kernelspec": {
    "display_name": "Python 3.10.4 64-bit",
