--- a/files/ds/ds4/ds_coloring_cor.ipynb
+++ b/files/ds/ds4/ds_coloring_cor.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/ds/ds4/ds_coloring_cor.ipynb'>DS 4 Corrigé : Coloriage de graphe <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# DS 4 Corrigé : Coloriage de graphe\n",
     "\n",
     "## Définitions (/4)"
    ]
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "# 1. (/1)\n",
-    "G1 = [[1, 3], [0, 2, 4], [1, 5], [0, 4], [3, 1, 5], [4, 1, 2]]"
+    "G1 = [[1, 3], [0, 2, 4, 5], [1, 5], [0, 4], [3, 1, 5], [4, 1, 2]]"
    ]
   },
   {
