--- a/files/ds/ds4/ds_coloring_cor.ipynb
+++ b/files/ds/ds4/ds_coloring_cor.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/ds/ds4/ds_coloring_cor.ipynb'>DS 4 Corrigé : Coloriage de graphe <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# DS 4 Corrigé : Coloriage de graphe\n",
     "\n",
     "## Définitions (/4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "[0, 1, 0, 1, 0, 2]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,15 +134,15 @@
     "# 3. (/3)\n",
     "def delta_color(G):\n",
     "    n = len(G)\n",
-    "    colors = [-1]*n\n",
+    "    colors = [-1]*n # les couleurs de chaque sommet\n",
     "    for u in range(n):\n",
-    "        colors_u = [False]*n\n",
+    "        colors_u = [False]*n # colors_u[c] est True ssi la couleur c est utilisée parmis les voisins de u\n",
     "        for v in G[u]:\n",
     "            if colors[v] != -1:\n",
     "                colors_u[colors[v]] = True\n",
     "        for i in range(n):\n",
     "            if colors_u[i] == False:\n",
-    "                colors[u] = i\n",
+    "                colors[u] = i # on donne la couleur i à u\n",
     "                break\n",
     "    return colors\n",
     "\n",
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. (/2)\n",
+    "# 2. (/1.5)\n",
     "def is_clique(G, V):\n",
     "    for u in V:\n",
     "        for v in V:\n",
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -273,13 +273,13 @@
        "3"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 1. (/1.5)\n",
+    "# 1. (/1)\n",
     "def ncolor1(C):\n",
     "    L = []\n",
     "    for c in C:\n",
@@ -291,8 +291,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q2. (/0.5)\n",
+    "Complexité : O($n^2$) car chaque `not in L` est en O($n$)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -301,13 +309,13 @@
        "3"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 2. (/2)\n",
+    "# 3. (/2)\n",
     "def ncolor2(C):\n",
     "    C.sort()\n",
     "    n = 1\n",
@@ -321,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -330,13 +338,13 @@
        "3"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 3. (/2)\n",
+    "# 4. (/2)\n",
     "def ncolor3(C):\n",
     "    B = [False]*len(C)\n",
     "    for c in C:\n",
