--- a/files/5_graph/tp/tp6/tp_exos_dfs_bfs.ipynb
+++ b/files/5_graph/tp/tp6/tp_exos_dfs_bfs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp6/tp_exos_dfs_bfs.ipynb'>Exercices DFS et BFS <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# Exercices DFS et BFS\n",
     "\n",
     "Les exercices à faire sont sur [LeetCode](https://leetcode.com).  \n",
     "Vous devez d'abord vous inscrire (Sign In). Vous pouvez pour cela vous connecter via Gmail, Github ou Facebook.\n",
@@ -14,7 +14,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : [Plus court chemin dans une matrice 0 - 1](https://leetcode.com/problems/shortest-path-in-binary-matrix)  \n",
     "Vous devez changer le langage pour choisir Python3 au lieu de C++. Vous devez remplir le code de la fonction à droite (ici `shortestPathBinaryMatrix`).  \n",
@@ -33,7 +37,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : [Périmètre d'une île](https://leetcode.com/problems/island-perimeter)  \n",
     "Vous pouvez utiliser un DFS (ou BFS) pour trouver la longueur du chemin qui fait le tour de l'île."
@@ -41,7 +49,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : [https://leetcode.com/problems/number-of-islands](https://leetcode.com/problems/number-of-islands)  \n",
     "Il s'agit de trouver le nombre de composante connexes d'un graphe."
@@ -49,7 +61,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : [Carrés parfaits](https://leetcode.com/problems/perfect-squares)\n",
     "\n",
@@ -60,16 +76,25 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "interpreter": {
    "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.4"
   }
  },
