--- a/files/5_graph/tp/tp6/tp_exos_dfs_bfs.ipynb
+++ b/files/5_graph/tp/tp6/tp_exos_dfs_bfs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp6/tp_exos_dfs_bfs.ipynb'>Exercices DFS et BFS <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# Exercices DFS et BFS\n",
     "\n",
     "Les exercices à faire sont sur [LeetCode](https://leetcode.com).  \n",
     "Vous devez d'abord vous inscrire (Sign In). Vous pouvez pour cela vous connecter via Gmail, Github ou Facebook.\n",
@@ -23,14 +23,14 @@
     "**Exercice** : [Plus court chemin dans une matrice 0 - 1](https://leetcode.com/problems/shortest-path-in-binary-matrix)  \n",
     "Vous devez changer le langage pour choisir Python3 au lieu de C++. Vous devez remplir le code de la fonction à droite (ici `shortestPathBinaryMatrix`).  \n",
     "Puis lisez l'énoncé à gauche.  \n",
-    "Ici on vous donne une matrice dont les éléments sont $0$ ou $1$, qui correspond à l'argument `grid` de la fontion `shortestPathBinaryMatrix`.  \n",
+    "Ici on vous donne une matrice (dont les éléments sont $0$ ou $1$), qui correspond à l'argument `grid` de la fonction `shortestPathBinaryMatrix`.  \n",
     "On vous demande de renvoyer le nombre minimum de cases de la matrice qu'il faut parcourir pour aller de la case en haut à gauche à la case en bas à droite.  \n",
     "Les exemples (en bas à gauche) peuvent aider à mieux comprendre :\n",
     "```python\n",
     "Input: grid = [[0,1],[1,0]]\n",
     "Output: 2\n",
     "```\n",
-    "Signifie que si votre `shortestPathBinaryMatrix` est appelé avec `grid = [[0,1],[1,0]]`, il faut que votre fonction renvoie $2$.\n",
+    "Signifie que si votre fonction `shortestPathBinaryMatrix` est appelé avec `grid = [[0,1],[1,0]]`, il faut que votre fonction renvoie $2$.\n",
     "\n",
     "Pour tester votre code, cliquer sur Run Code en bas à droite. Quand les tests marchent, vous pouvez cliquer sur Submit."
    ]
@@ -55,8 +55,8 @@
     ]
    },
    "source": [
-    "**Exercice** : [https://leetcode.com/problems/number-of-islands](https://leetcode.com/problems/number-of-islands)  \n",
-    "Il s'agit de trouver le nombre de composante connexes d'un graphe."
+    "**Exercice** : [Nombre d'îles](https://leetcode.com/problems/number-of-islands)  \n",
+    "Il s'agit de trouver le nombre de composante connexes d'un graphe (avec DFS ou BFS)."
    ]
   },
   {
