--- a/files/5_graph/tp/tp6/tp_exos_dfs_bfs.ipynb
+++ b/files/5_graph/tp/tp6/tp_exos_dfs_bfs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp6/tp_exos_dfs_bfs.ipynb'>Exercices DFS et BFS <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# Exercices DFS et BFS\n",
     "\n",
     "Les exercices à faire sont sur [LeetCode](https://leetcode.com).  \n",
     "Vous devez d'abord vous inscrire (Sign In). Vous pouvez pour cela vous connecter via Gmail, Github ou Facebook.\n",
@@ -20,7 +20,7 @@
     ]
    },
    "source": [
-    "**Exercice** : [Plus court chemin dans une matrice 0 - 1](https://leetcode.com/problems/shortest-path-in-binary-matrix)  \n",
+    "**Exercice** : [**Plus court chemin dans une matrice 0 - 1**](https://leetcode.com/problems/shortest-path-in-binary-matrix)  \n",
     "Vous devez changer le langage pour choisir Python3 au lieu de C++. Vous devez remplir le code de la fonction à droite (ici `shortestPathBinaryMatrix`).  \n",
     "Puis lisez l'énoncé à gauche.  \n",
     "Ici on vous donne une matrice (dont les éléments sont $0$ ou $1$), qui correspond à l'argument `grid` de la fonction `shortestPathBinaryMatrix`.  \n",
@@ -32,7 +32,37 @@
     "```\n",
     "Signifie que si votre fonction `shortestPathBinaryMatrix` est appelé avec `grid = [[0,1],[1,0]]`, il faut que votre fonction renvoie $2$.\n",
     "\n",
-    "Pour tester votre code, cliquer sur Run Code en bas à droite. Quand les tests marchent, vous pouvez cliquer sur Submit."
+    "Pour tester votre code, cliquer sur Run Code en bas à droite. Quand les tests marchent, vous pouvez cliquer sur Submit.  \n",
+    "\n",
+    "Pour vous aider, vous pouvez compléter le code suivant :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "class Solution:\n",
+    "    def shortestPathBinaryMatrix(self, grid) -> int:\n",
+    "        q = deque([(0, 0, 1)]) \n",
+    "        # on met dans q des triplets (i, j, d) où (i, j) est une case de grid\n",
+    "        # et d est sa distance à la case en haut à gauche\n",
+    "        while q:\n",
+    "            i, j, d = q.popleft() # on parcourt la case ligne i, colonne j\n",
+    "            if ...: # tester si la grille vaut 0 en (i, j)\n",
+    "                if ...: # tester si (i, j) est en fait la case en bas à droite (l'arrivée)\n",
+    "                    return d\n",
+    "                \n",
+    "                # parcours des voisins de (i, j)\n",
+    "                for k in [-1, 0, 1]:\n",
+    "                    for l in [-1, 0, 1]:\n",
+    "                        # tester si (i + k, j + l) est une case de la grille (ne dépasse pas)\n",
+    "                        # si oui, on ajoute (i + k, j + l, d + 1) dans q\n",
+    "                        # et on marque (i + k, j + l) comme visité (en mettant 1 dans grid, par exemple)\n",
+    "        return -1 # si on ne trouve pas de chemin, on renvoie -1"
    ]
   },
   {
@@ -43,7 +73,7 @@
     ]
    },
    "source": [
-    "**Exercice** : [Périmètre d'une île](https://leetcode.com/problems/island-perimeter)  \n",
+    "**Exercice** : [**Périmètre d'une île**](https://leetcode.com/problems/island-perimeter)  \n",
     "Vous pouvez utiliser un DFS (ou BFS) pour trouver la longueur du chemin qui fait le tour de l'île."
    ]
   },
