--- a/files/5_graph/tp/tp6/tp_exos_dfs_bfs.ipynb
+++ b/files/5_graph/tp/tp6/tp_exos_dfs_bfs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp6/tp_exos_dfs_bfs.ipynb'>Exercices DFS et BFS <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# Exercices DFS et BFS\n",
     "\n",
     "Les exercices à faire sont sur [LeetCode](https://leetcode.com).  \n",
     "Vous devez d'abord vous inscrire (Sign In). Vous pouvez pour cela vous connecter via Gmail, Github ou Facebook.\n",
@@ -73,20 +73,29 @@
     ]
    },
    "source": [
-    "**Exercice** : [**Périmètre d'une île**](https://leetcode.com/problems/island-perimeter)  \n",
-    "Vous pouvez utiliser un DFS (ou BFS) pour trouver la longueur du chemin qui fait le tour de l'île."
+    "**Exercice** : [Nombre d'îles](https://leetcode.com/problems/number-of-islands)  \n",
+    "Il s'agit de trouver le nombre de composante connexes d'un graphe (avec DFS ou BFS).  \n",
+    "Pour vous aider, vous pouvez compléter le code suivant :"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "exo"
-    ]
-   },
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "**Exercice** : [Nombre d'îles](https://leetcode.com/problems/number-of-islands)  \n",
-    "Il s'agit de trouver le nombre de composante connexes d'un graphe (avec DFS ou BFS)."
+    "class Solution:\n",
+    "    def numIslands(self, grid) -> int:\n",
+    "        n, p = ... # dimensions de la matrice\n",
+    "        visited = ... # création d'une matrice n*p remplie de False\n",
+    "        def dfs(i, j): # fait un parcourir en profondeur depuis la case (i, j)\n",
+    "            # marquer (i, j) comme étant visité\n",
+    "            for (k, l) in [(i - 1, j), (i + 1, j), (i, j - 1), (i, j + 1)]:\n",
+    "                # pour tous les voisins possibles de (i, j)\n",
+    "                if ...: # si (k, l) ne sort pas de la matrice, est de la terre et n'a pas été visité\n",
+    "                    dfs(k, l) # visiter (k, l)\n",
+    "        # appeler dfs(i, j) pour chaque case non encore visité et contenant de la terre\n",
+    "        # renvoyer le nombre d' appels à dfs"
    ]
   },
   {
