--- a/files/ds/ds4/ds_coloring_cor.ipynb
+++ b/files/ds/ds4/ds_coloring_cor.ipynb
@@ -4,18 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/ds/ds4/ds_coloring_cor.ipynb'>DS 4 Corrigé : Coloriage de graphe <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# DS 4 Corrigé : Coloriage de graphe\n",
     "\n",
-    "## Définitions (/4)"
+    "## Définitions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. (/1)\n",
+    "# 1.\n",
     "G1 = [[1, 3], [0, 2, 4, 5], [1, 5], [0, 4], [3, 1, 5], [4, 1, 2]]"
    ]
   },
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q2. (/0.5) Exemple de 3-coloriage possible :\n",
+    "Q2. Exemple de 3-coloriage possible :\n",
     " \n",
     "| Sommet | 0 | 1 | 2 | 3 | 4 | 5 |\n",
     "|---|---|---|---|---|---|---|\n",
@@ -34,9 +34,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q3. (/0.5) Les 3 sommets 1, 2, 5 sont tous reliés entre eux donc doivent être de couleurs différentes. D'où la nécessité d'avoir au moins 3 couleurs.  \n",
+    "Q3.  Les 3 sommets 1, 2, 5 sont tous reliés entre eux donc doivent être de couleurs différentes. D'où la nécessité d'avoir au moins 3 couleurs.  \n",
     "\n",
-    "Q4. (/0.5) Il suffit de colorier chaque sommet avec une couleur différente."
+    "Q4.  Il suffit de colorier chaque sommet avec une couleur différente."
    ]
   },
   {
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "# Q5 (/1.5)\n",
+    "# Q5 \n",
     "def valid(G, C):\n",
     "    for u in range(len(G)):\n",
     "        for v in G[u]:\n",
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Degré (/5)"
+    "## Degré "
    ]
   },
   {
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. (/0.5)\n",
+    "# 1. \n",
     "def deg(G, v):\n",
     "    return len(G[v])"
    ]
@@ -102,7 +102,7 @@
     }
    ],
    "source": [
-    "# 2. (/1.5)\n",
+    "# 2. \n",
     "def deg_max(G):\n",
     "    maxi = 0\n",
     "    for v in range(len(G)):\n",
@@ -131,7 +131,7 @@
     }
    ],
    "source": [
-    "# 3. (/3)\n",
+    "# 3. \n",
     "def delta_color(G):\n",
     "    n = len(G)\n",
     "    colors = [-1]*n # les couleurs de chaque sommet\n",
@@ -153,9 +153,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clique (/2.5)\n",
+    "## Clique \n",
     "\n",
-    "Q1. (/0.5) Tous les sommets d'une clique doivent être de couleur différente."
+    "Q1.  Tous les sommets d'une clique doivent être de couleur différente."
    ]
   },
   {
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. (/1.5)\n",
+    "# 2. \n",
     "def is_clique(G, V):\n",
     "    for u in V:\n",
     "        for v in V:\n",
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2-coloration par parcours en profondeur (/3.5)"
+    "## 2-coloration par parcours en profondeur "
    ]
   },
   {
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "# 1. (/2.5)\n",
+    "# 1. \n",
     "def color2(G):\n",
     "    C = [-1]*len(G)\n",
     "    def aux(v, c): # parcours en profondeur sur v, en lui donnant la couleur c\n",
@@ -234,7 +234,7 @@
     }
    ],
    "source": [
-    "# 2. (/1)\n",
+    "# 2. \n",
     "def color2(G):\n",
     "    C = [-1]*len(G)\n",
     "    def aux(v, c): # parcours en profondeur sur v, en lui donnant la couleur c\n",
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comptage du nombre de couleurs (/5.5)"
+    "## Comptage du nombre de couleurs "
    ]
   },
   {
@@ -279,7 +279,7 @@
     }
    ],
    "source": [
-    "# 1. (/1)\n",
+    "# 1. \n",
     "def ncolor1(C):\n",
     "    L = []\n",
     "    for c in C:\n",
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q2. (/0.5)\n",
+    "Q2. \n",
     "Complexité : O($n^2$) car chaque `not in L` est en O($n$)."
    ]
   },
@@ -315,7 +315,7 @@
     }
    ],
    "source": [
-    "# 3. (/2)\n",
+    "# 3. \n",
     "def ncolor2(C):\n",
     "    C.sort()\n",
     "    n = 1\n",
@@ -344,7 +344,7 @@
     }
    ],
    "source": [
-    "# 4. (/2)\n",
+    "# 4. \n",
     "def ncolor3(C):\n",
     "    B = [False]*len(C)\n",
     "    for c in C:\n",
@@ -361,10 +361,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "73a7628e7fbe50a71e811baaf24b93be3ca0f9147b8f95081f8bab36bc67b220"
+   "hash": "8845fe84c8a6a86347dfbe69e8b7ba23517cefe76fdc7b8b45dfd1399facadbd"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.10.4 ('itc1-FrvUDmLs-py3.10')",
    "language": "python",
    "name": "python3"
   },
