--- a/files/5_graph/tp/tp6/tp_dijkstra.ipynb
+++ b/files/5_graph/tp/tp6/tp_dijkstra.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp6/tp_dijkstra.ipynb'>TP : Algorithme de Dijkstra <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# TP : Algorithme de Dijkstra\n",
     "\n",
     "Pour simplifier, j'ai écrit un [module Python](https://github.com/fortierq/itc-code) regroupant des fonctions utilitaires, dont les suivantes que vous pouvez utiliser pour générer un graphe aléatoire par matrice d'adjacence et l'afficher :"
    ]
@@ -141,12 +141,13 @@
     ]
    },
    "source": [
-    "**Exercice** : Compléter la fonction suivante pour implémenter l'algorithme de Dijkstra permettant de trouver les distances de $s$ aux autres sommets de $G$."
+    "**Exercice** : Compléter la fonction suivante pour implémenter l'algorithme de Dijkstra permettant de trouver les distances de $s$ aux autres sommets de $G$.  \n",
+    "Vérifier sur un exemple."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +155,7 @@
      "evalue": "cannot assign to ellipsis (3987963498.py, line 11)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [3]\u001b[0;36m\u001b[0m\n\u001b[0;31m    for ...: # pour tous les voisins v de u:\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m cannot assign to ellipsis\n"
+      "\u001b[0;36m  Input \u001b[0;32mIn [1]\u001b[0;36m\u001b[0m\n\u001b[0;31m    for ...: # pour tous les voisins v de u:\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m cannot assign to ellipsis\n"
      ]
     }
    ],
@@ -173,12 +174,28 @@
     "                # ajouter (dist[u] + G[u][v], v) à q\n",
     "    return dist # dist[u] est la distance de s vers u\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercices LeetCode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercice** : Résoudre les exercices suivants :  \n",
+    "- [Path with minimum effort](https://leetcode.com/problems/path-with-minimum-effort/)  \n",
+    "- [Network Delay Time](https://leetcode.com/problems/network-delay-time)"
+   ]
   }
  ],
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.7.3 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -192,11 +209,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.7.3"
   },
   "vscode": {
    "interpreter": {
-    "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
