--- a/files/5_graph/3_traversal/dfs/code_dfs.ipynb
+++ b/files/5_graph/3_traversal/dfs/code_dfs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/3_traversal/dfs/code_dfs.ipynb'>Code : Parcours en profondeur <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# Code : Parcours en profondeur\n",
     "\n",
     "## Graphe de test"
    ]
@@ -29,7 +29,7 @@
     "try:\n",
     "    __import__(\"cpge\")\n",
     "except ImportError:\n",
-    "    ! pip install cpge &> /dev/null\n",
+    "    ! pip install git+https://github.com/fortierq/itc-code &> /dev/null\n",
     "import cpge.graph\n",
     "\n",
     "G = cpge.graph.random_list()\n",
