--- a/files/5_graph/tp/tp6/tp_dijkstra.ipynb
+++ b/files/5_graph/tp/tp6/tp_dijkstra.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp6/tp_dijkstra.ipynb'>TP : Algorithme de Dijkstra <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>"
+    "# TP : Algorithme de Dijkstra"
    ]
   },
   {
