--- a/files/5_graph/tp/tp6/tp_dijkstra.ipynb
+++ b/files/5_graph/tp/tp6/tp_dijkstra.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp6/tp_dijkstra.ipynb'>TP : Algorithme de Dijkstra <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>"
+    "# TP : Algorithme de Dijkstra"
    ]
   },
   {
@@ -176,9 +176,7 @@
     ]
    },
    "source": [
-    "**Exercice** : Résoudre les exercices suivants :  \n",
-    "- [Path with minimum effort](https://leetcode.com/problems/path-with-minimum-effort/)  \n",
-    "- [Network Delay Time](https://leetcode.com/problems/network-delay-time)  \n",
+    "**Exercice** : Résoudre l'exercice suivant : [Network Delay Time](https://leetcode.com/problems/network-delay-time)  \n",
     "\n",
     "On pourra copier/coller le code suivant pour utiliser une PriorityQueue :"
    ]
@@ -213,13 +211,6 @@
     "    def __contains__(self, element):\n",
     "        return element in self.d"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
