--- a/files/5_graph/tp/tp6/tp_dijkstra.ipynb
+++ b/files/5_graph/tp/tp6/tp_dijkstra.ipynb
@@ -176,7 +176,9 @@
     ]
    },
    "source": [
-    "**Exercice** : Résoudre l'exercice suivant : [Network Delay Time](https://leetcode.com/problems/network-delay-time)  \n",
+    "**Exercice** : Résoudre les exercices suivants :  \n",
+    "- [Network Delay Time](https://leetcode.com/problems/network-delay-time)  \n",
+    "- [Minimum path sum](https://leetcode.com/problems/minimum-path-sum)\n",
     "\n",
     "On pourra copier/coller le code suivant pour utiliser une PriorityQueue :"
    ]
