--- a/files/5_graph/tp/tp6/tp_dijkstra.ipynb
+++ b/files/5_graph/tp/tp6/tp_dijkstra.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp6/tp_dijkstra.ipynb'>TP : Algorithme de Dijkstra <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>"
+    "# TP : Algorithme de Dijkstra"
    ]
   },
   {
@@ -152,7 +152,7 @@
     "    dist[s] = 0\n",
     "    q = PriorityQueue()\n",
     "    # ajouter chaque sommet v de G à q, avec comme priorité dist[v]\n",
-    "    while ...: # tant que G n'est pas vide\n",
+    "    while ...: # tant que q n'est pas vide\n",
     "        u = ... # extraire de q le sommet de priorité minimum\n",
     "        for v in range(n): # pour chaque voisin de u\n",
     "            d = dist[u] + G[u][v]\n",
@@ -176,9 +176,7 @@
     ]
    },
    "source": [
-    "**Exercice** : Résoudre les exercices suivants :  \n",
-    "- [Network Delay Time](https://leetcode.com/problems/network-delay-time)  \n",
-    "- [Minimum path sum](https://leetcode.com/problems/minimum-path-sum)\n",
+    "**Exercice** : Résoudre l'exercice suivant : [Network Delay Time](https://leetcode.com/problems/network-delay-time)  \n",
     "\n",
     "On pourra copier/coller le code suivant pour utiliser une PriorityQueue :"
    ]
