--- a/files/5_graph/tp/tp8/tp_osm.ipynb
+++ b/files/5_graph/tp/tp8/tp_osm.ipynb
@@ -4,21 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp8/tp_osm.ipynb'>TP : Plus court chemin sur un graphe de OpenStreetMap <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# TP : Plus court chemin sur un graphe de OpenStreetMap\n",
     "\n",
     "OpenStreetMap est un projet collaboratif de cartographie en ligne qui vise à constituer une base de données géographiques libre du monde. Nous allons y accéder via Python avec le module `osmnx` :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'PriorityQueue' from 'cpge' (unknown location)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/qfortier/cours/info/itc/itc1/itc1-python/5_graph/tp/tp8/tp_osm.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/qfortier/cours/info/itc/itc1/itc1-python/5_graph/tp/tp8/tp_osm.ipynb#ch0000001?line=9'>10</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39murllib\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/qfortier/cours/info/itc/itc1/itc1-python/5_graph/tp/tp8/tp_osm.ipynb#ch0000001?line=10'>11</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcpge\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/qfortier/cours/info/itc/itc1/itc1-python/5_graph/tp/tp8/tp_osm.ipynb#ch0000001?line=11'>12</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcpge\u001b[39;00m \u001b[39mimport\u001b[39;00m PriorityQueue\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'PriorityQueue' from 'cpge' (unknown location)"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    __import__(\"cpge\")\n",
     "except ImportError:\n",
     "    ! pip install git+https://github.com/fortierq/itc-code &> /dev/null\n",
+    "try:\n",
+    "    __import__(\"osmnx\")\n",
+    "except ImportError:\n",
+    "    ! pip install osmnx\n",
     "import osmnx as ox\n",
     "import urllib\n",
     "from cpge import PriorityQueue"
@@ -9339,7 +9355,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -9357,7 +9373,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
