--- a/files/5_graph/tp/tp8/tp_osm.ipynb
+++ b/files/5_graph/tp/tp8/tp_osm.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp8/tp_osm.ipynb'>TP : Plus court chemin sur un graphe de OpenStreetMap <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# TP : Plus court chemin sur un graphe de OpenStreetMap\n",
     "\n",
     "OpenStreetMap est un projet collaboratif de cartographie en ligne qui vise à constituer une base de données géographiques libre du monde. Nous allons y accéder via Python avec le module `osmnx` :"
    ]
@@ -9348,7 +9348,8 @@
     ]
    },
    "source": [
-    "**Exercice** : Écrire l'algorithme de Dijkstra en l'adaptant au graphe G ci-dessus. En déduire la longueur d'un plus court chemin pour aller de Fénelon Sainte-Marie (sommet d'identifiant 27234946 et de coordonnées GPS (48.879371, 2.317216)) à la gare Saint-Lazare (sommet d'identifiant 5291826748)."
+    "**Exercice** : Écrire l'algorithme de Dijkstra en l'adaptant au graphe G ci-dessus.  \n",
+    "En déduire la longueur d'un plus court chemin pour aller de Fénelon Sainte-Marie (sommet d'identifiant 27234946 et de coordonnées GPS (48.879371, 2.317216)) à la gare Saint-Lazare (sommet d'identifiant 5291826748)."
    ]
   }
  ],
