--- a/files/5_graph/tp/tp8/tp_osm.ipynb
+++ b/files/5_graph/tp/tp8/tp_osm.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp8/tp_osm.ipynb'>TP : Plus court chemin sur un graphe de OpenStreetMap <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# TP : Plus court chemin sur un graphe de OpenStreetMap\n",
     "\n",
     "OpenStreetMap est un projet collaboratif de cartographie en ligne qui vise à constituer une base de données géographiques libre du monde. Nous allons y accéder via Python avec le module `osmnx` :"
    ]
@@ -32,6 +32,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Vous pouvez voir d'autres exemples d'utilisation de OpenStreeMap ici.](https://github.com/gboeing/osmnx-examples/tree/main/notebooks)  \n",
+    "\n",
     "Par exemple, voici le graphe du réseau routier à proximité du lycée Fénelon Sainte-Marie :"
    ]
   },
