--- a/files/5_graph/5_astar/astar_code.ipynb
+++ b/files/5_graph/5_astar/astar_code.ipynb
@@ -9,7 +9,7 @@
     "Ce notebook illustre l'algorithme A* avec différentes heuristiques, sur une grille de taille $n\\times n$ où l'objectif est de trouver le plus court chemin de la case en haut à gauche $(0, 0)$ à celle en bas à droite $(n - 1, n - 1)$. Chaque sommet $(i, j)$ est relié aux $4$ (au plus) sommets adjacents.  \n",
     "**Remarque** : toutes les arêtes ont un poids égal à 1. On pourrait donc utiliser un parcours en largeur pour trouver un plus court chemin. Mais, comme on va le voir, A* permet de visiter moins de sommets (et donc d'être plus rapide).  \n",
     "Dans la grille, les obstacles sont en noir, les sommets visités par l'algorithme en bleu et le sommet en cours de traitement en vert. À la fin, le chemin trouvé par A* est colorié en vert.  \n",
-    "[Les fonctions suivantes sont définies dans le module cpge](https://github.com/fortierq/itc-code) :\n",
+    "[Les fonctions suivantes sont définies dans le module cpge](https://github.com/cpge-itc/itc-code) :\n",
     "- `generate_grid(n)` renvoie une matrice de taille $n\\times n$ avec des obstacles aléatoires.  \n",
     "- `anim_astar(G, h)` affiche l'animation de A* avec comme heuristique $h$, c'est-à-dire que $h(i, j)$ est censé donner une approximation de la distance de la case $(i, j)$ à la case $(n-1, n-1)$."
    ]
@@ -30,7 +30,7 @@
     "try:\n",
     "    __import__(\"cpge\")\n",
     "except ImportError:\n",
-    "    ! pip install git+https://github.com/fortierq/itc-code &> /dev/null\n",
+    "    ! pip install git+https://github.com/cpge-itc/itc-code &> /dev/null\n",
     "from cpge import generate_grid, anim_astar\n",
     "\n",
     "n = 10 # taille de la grille\n",
