--- a/files/5_graph/tp/tp8/tp_osm.ipynb
+++ b/files/5_graph/tp/tp8/tp_osm.ipynb
@@ -18,7 +18,7 @@
     "try:\n",
     "    __import__(\"cpge\")\n",
     "except ImportError:\n",
-    "    ! pip install git+https://github.com/fortierq/itc-code &> /dev/null\n",
+    "    ! pip install git+https://github.com/cpge-itc/itc-code &> /dev/null\n",
     "try:\n",
     "    __import__(\"osmnx\")\n",
     "except ImportError:\n",
