--- a/files/5_graph/3_traversal/dfs/code_dfs.ipynb
+++ b/files/5_graph/3_traversal/dfs/code_dfs.ipynb
@@ -29,7 +29,7 @@
     "try:\n",
     "    __import__(\"cpge\")\n",
     "except ImportError:\n",
-    "    ! pip install git+https://github.com/fortierq/itc-code &> /dev/null\n",
+    "    ! pip install git+https://github.com/cpge-itc/itc-code &> /dev/null\n",
     "import cpge.graph\n",
     "\n",
     "G = cpge.graph.random_list()\n",
