--- a/files/5_graph/4_dijkstra/dijkstra_code.ipynb
+++ b/files/5_graph/4_dijkstra/dijkstra_code.ipynb
@@ -46,7 +46,7 @@
     "try:\n",
     "    __import__(\"cpge\")\n",
     "except ImportError:\n",
-    "    ! pip install git+https://github.com/fortierq/itc-code &> /dev/null\n",
+    "    ! pip install git+https://github.com/cpge-itc/itc-code &> /dev/null\n",
     "import cpge.graph\n",
     "\n",
     "G = cpge.graph.random_matrix(directed=True, weighted=True)\n",
