--- a/files/5_graph/tp/tp6/tp_dijkstra.ipynb
+++ b/files/5_graph/tp/tp6/tp_dijkstra.ipynb
@@ -44,7 +44,7 @@
     "try:\n",
     "    __import__(\"cpge\")\n",
     "except ImportError:\n",
-    "    ! pip install git+https://github.com/fortierq/itc-code\n",
+    "    ! pip install git+https://github.com/cpge-itc/itc-code\n",
     "import cpge.graph\n",
     "\n",
     "G = cpge.graph.random_matrix(weighted=True, directed=True)\n",
